# meituan-cloud-fridge

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  setup.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/constants/: enums.py
backend/app/core/: config.py  exceptions.py  response.py  security.py
backend/app/mock_data/: demo_data.py
backend/app/models/: __init__.py  base.py  household.py  ingredient.py  order_sync.py  purchase_plan.py  recipe.py  recognition.py  user.py
backend/app/repositories/: ingredient.py  inventory.py  order_sync.py  purchase.py  recipe.py  recognition.py  user.py
backend/app/routers/: auth.py  inventory.py  order_sync.py  profile.py  purchase.py  recipe.py  recognition.py  senior_mode.py
backend/app/schemas/: auth.py  common.py  inventory.py  order_sync.py  profile.py  purchase.py  recipe.py  recognition.py
backend/app/services/: auth.py  inventory.py  order_sync.py  profile.py  purchase.py  recipe.py  recognition.py
backend/meituan_cloud_fridge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_demo_data.py  verify_demo_flow.py
backend/tests/api/: test_auth_and_recommendation.py
docs/: demo-script.md  local-run-guide.md  stage-1-architecture.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: providers.tsx  router.tsx
infra/docker/: docker-compose.yml
infra/sql/: bootstrap.sql
scripts/: check.sh  dev-frontend.sh  dev.sh
(+43 files in other folders)
